# noboilerplate

./: .codespellrc  .gitignore  1615563443-h510-elite-white-black-kraken-x-system-purple-lighting-2.avif  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  LICENSE.md  Makefile  README.md  app.css
.github/: FUNDING.yml
Excalidraw/: 36-Linux-Workstations 2023-12-21 11.55.47.excalidraw.md
docs/: CNAME  app.css  bulma-min.css  discord.html  errata.html  index.html  tailwind.config.js
scripts/: .gitignore  01-rust-your-code-can-be-perfect.md  02-rust-makes-you-feel-like-a-genius.md  04-rust-impatient.md  05-stop-writing-rust.md  06-build-your-rust-lightsaber.md  07-rust-is-not-a-faster-horse.md  08-1-patreon-announcement.md  08-building-a-space-station-in-rust.md  09-rust-on-rails.md  10 Rust Makes Cents.md  10-Rust-Everywhere.md  11-Rust-Makes-Cents.md  11-rust-makes-cents.md  12-webgl-rust-wasm.md  13-rust-is-boring.md  13-why-rust.md  14-youre-doing-agile-wrong.backup  14-youre-doing-agile-wrong.md  15-rust-is-easy.md  16-rust-testing.md  17-5-mentorship-announcement.md  17-ai-the-second-renaissance.md  18-rusts-magic-macros.md  19-av.md  20-rust-userland.md  21-meditation-for-coders-redux.md  22-starting-rust.md  23-amateur-radio.md  24-rust-data-modelling.md  25-podcasts-rss.md  25-polyphasic-sleep.md  26-oxidise-your-infra-with-shuttle.md  26-shuttle-tutorial.md  27-coping-mechanisms.md  28-how-to-speak-basic-rust.md  29-obsidian.md  30-poem.md  31-soylent.md  32-rust-is-written-in-rust.md  (+39 more)
src/: main.rs
subtitles/: Cargo.toml  README.md
subtitles/src/: main.rs
(+47 files in other folders)
